      not in the selected 8-bit character set (most often Latin-1) and
      the \R session is using a UTF-8 locale, the warning messages will
      show the UTF-8 character rather than its bytes and one dot will be
      substituted per character rather than per byte.  (Platforms whose
      \code{iconv()} does transliteration silently plot the
      transliteration.)
    }
  }

  \subsection{INSTALLATION on a UNIX-ALIKE}{
    \itemize{
      \item System valgrind headers are required to use
      \command{configure} option \option{--with-valgrind-instrumentation}
      with value \code{1} or \code{2}.

      \item \command{configure} will warn if it encounters a 32-bit
      build, as that is nowadays almost untested.

      \item Environment variable \env{R_SYSTEM_ABI} is no longer used and
      so no longer recorded in \file{etc/Renviron} (it was not on Windows
      and was only ever used when preparing package \pkg{tools}).

      \item There is an experimental \command{configure} option
      \option{--with-libdeflate-compression} which uses
      \code{libdeflate} rather than \code{libz} to (de)compress \R
      objects in lazy-load databases, if the \code{libdeflate} library
      and headers are available.  Typically tasks spend up to 5\% of
      their time on such operations, although creating lazy-data
      databases is one of the exceptions.

      \emph{pro tem} this can also be selected by setting environment
      variable \env{R_USE_LIBDEFLATE_FOR_LAZYLOAD} to \code{yes}.

      \item \command{configure} \option{--enable-lto=check} has not
      worked reliably since 2019 and has been removed.
    }
  }

  \subsection{INSTALLATION on macOS}{
    \itemize{
      \item A new \command{configure} option \option{--with-newAccelerate}
      makes use of Apple's \sQuote{new} BLAS / LAPACK interfaces in their
      Accelerate framework.  Those interfaces are only available in macOS
      13.3 or later, and building requires SDK 13.3 or later (from the